# Meli-Lib

./: README.md  pyproject.toml  requirements.txt
meli_lib/: meli.py
meli_lib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_buffer.py
